- [#5235] Explicitly provide the configuration check namespaces
- [#5389] Crash when confirming/canceling an event with time-slots
- [#5416] Relax the static_info_tables version dependencies
- [#5402] Add link to bug tracker
- [#5400] Allow more than 22 pages in the flexforms
- [#5321] Update .htaccess to be Apache 2.4 compatible

Cleanup:
- [#5543] Rename tx_seminars_cli_MailNotifier to Tx_Seminars_Cli_MailNotifier
- [#5538] Rename tx_seminars_BagBuilder_Speaker to Tx_Seminars_BagBuilder_Speaker
- [#5537] Rename tx_seminars_BagBuilder_Registration to Tx_Seminars_BagBuilder_Registration
- [#5536] Rename tx_seminars_BagBuilder_Organizer to Tx_Seminars_BagBuilder_Organizer
- [#5524] Rename tx_seminars_BagBuilder_Event to Tx_Seminars_BagBuilder_Event
- [#5535] Rename tx_seminars_BagBuilder_Category to Tx_Seminars_BagBuilder_Category
- [#5534] Rename tx_seminars_BagBuilder_Abstract to Tx_Seminars_BagBuilder_Abstract
- [#5533] Rename tx_seminars_Bag_TimeSlot to Tx_Seminars_Bag_TimeSlot
- [#5532] Rename tx_seminars_Bag_Speaker to Tx_Seminars_Bag_Speaker
- [#5531] Rename tx_seminars_Bag_Registration to tx_seminars_Bag_Registration
- [#5573] Fix the spelling of "comma-separated"
- [#5529] Rename tx_seminars_Bag_Category to Tx_Seminars_Bag_Category
- [#5528] Rename tx_seminars_Bag_Event to Tx_Seminars_Bag_Event
- [#5527] Rename tx_seminars_Mapper_Lodging to Tx_Seminars_Mapper_Lodging
- [#5541] Rename tx_seminars_Tests_Fixtures_Bag_Testing to Tx_Seminars_Tests_Unit_Fixtures_Bag_Testing
- [#5540] Rename tx_seminars_tests_fixtures_OldModel_Testing to Tx_Seminars_Tests_Unit_Fixtures_OldModel_Testing
- [#5525] Rename tx_seminars_Bag_Abstract to Tx_Seminars_Bag_Abstract
- [#5519] Rename tx_seminars_module2 to Tx_Seminars_Module2
- [#5523] Rename tx_seminars_BackEnd_SpeakersList to Tx_Seminars_BackEnd_SpeakersList
- [#5522] Rename tx_seminars_BackEnd_RegistrationsList to Tx_Seminars_BackEnd_RegistrationsList