@@ -1996,7 +1996,7 @@ class tx_seminars_FrontEnd_DefaultController extends Tx_Oelib_TemplateHelper imp
 				$imageConfiguration = array(
 					'altText' => $this->seminar->getTitle(),
 					'titleText' => $this->seminar->getTitle(),
-					'file' => tx_seminars_FrontEnd_AbstractView::UPLOAD_PATH . $this->seminar->getImage(),
+					'file' => Tx_Seminars_FrontEnd_AbstractView::UPLOAD_PATH . $this->seminar->getImage(),
 					'file.' => array(
 						'width' => $this->getConfValueInteger('seminarImageListViewWidth') . 'c',
 						'height' => $this->getConfValueInteger('seminarImageListViewHeight') . 'c',
@@ -3016,7 +3016,7 @@ class tx_seminars_FrontEnd_DefaultController extends Tx_Oelib_TemplateHelper imp
 
 		return $this->cObj->IMAGE(
 			array(
-				'file' => tx_seminars_FrontEnd_AbstractView::UPLOAD_PATH . $iconData['icon'],
+				'file' => Tx_Seminars_FrontEnd_AbstractView::UPLOAD_PATH . $iconData['icon'],
 				'titleText' => $iconData['title'],
 			)
 		);
