@@ -22,7 +22,7 @@ use TYPO3\CMS\Core\Utility\GeneralUtility;
  * @author Bernd Schönbach <bernd@oliverklee.de>
  * @author Oliver Klee <typo3-coding@oliverklee.de>
  */
-class tx_seminars_FrontEnd_RequirementsList extends tx_seminars_FrontEnd_AbstractView {
+class tx_seminars_FrontEnd_RequirementsList extends Tx_Seminars_FrontEnd_AbstractView {
 	/**
 	 * @var tx_seminars_seminar the event to build the requirements list for
 	 */
